레이즈 스터디 5.7까지 완료했음

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,12 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<h1>Welcome Jacob's Rails Study.</h1>
+<p>I'm OpenShift in jacobrails project.</p>
+<br>
+<p>본 서비스는 "초보자를 위한 레일스 가이드라인"의 샘플 프로젝트입니다.</p>
+<br>
+<div>
+  <ul>
+    <li>2015.10.28 수요일 / jacob.c 진도 현황 -> <a href="https://rorlab.gitbooks.io/railsguidebook/content/contents/walkthrough/model_association.html">5.7</a></li>
+  </ul>
+</div>
+<br>
+<%= link_to "글작성", new_post_path, class:'btn btn-default' %> <%= link_to "글목록", posts_path, class:'btn btn-default' %>
