--- a/app/views/bulletins/show.html.erb
+++ b/app/views/bulletins/show.html.erb
@@ -10,6 +10,10 @@
   <td><%= @bulletin.description %></td>
 </tr>
 <tr>
+  <th>Post Type</th>
+  <td><%= @bulletin.post_type %></td>
+</tr>
+<tr>
   <th>Created at</th>
   <td><%= @bulletin.created_at %></td>
 </tr>
