--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -11,6 +11,9 @@
     <li>
       2015.10.29 목요일 / jacob.c 진도 현황 -> <%= link_to "5.10", "https://rorlab.gitbooks.io/railsguidebook/content/contents/walkthrough/bulletin_type.html" %>
     </li>
+    <li>
+      5.14 > '그리고 config/routes.rb 파일을 열어 관련 라우팅 테이블 수정해 주어야 한다. 아래는 레일스의 컨트롤러 제너레이터를' >>>> 진행하다가 말았음
+    </li>
   </ul>
 </div>
 <br>
