--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,12 +1,17 @@
 <%= simple_form_for([@bulletin, @post]) do |f| %>
-  <%= f.error_notification %>
+    <%= f.error_notification %>
 
-  <div class="form-inputs">
-    <%= f.input :title %>
-    <%= f.input :content, input_html: { rows: 10 } %>
-  </div>
+    <div class="form-inputs">
+      <%= f.input :title %>
+      <%= f.input :content, input_html: { rows: 10 } %>
 
-  <div class="form-actions">
-    <%= f.button :submit %>
-  </div>
+      <% if @post.bulletin.post_type == "gallery" %>
+          <%= f.input :picture, as: :file %>
+          <%= f.hidden_field :picture_cache %>
+      <% end %>
+    </div>
+
+    <div class="form-actions">
+      <%= f.button :submit %>
+    </div>
 <% end %>
