--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -36,3 +36,20 @@ input[type='file'] {
     }
   }
 }
+
+.tag_list {
+  margin-bottom: .5em;
+}
+
+a.tag {
+  border:1px solid #eaeaea;
+  border-radius:3px;
+  background-color: #f4f4f4;
+  padding:.1em .2em;
+  &:hover {
+    text-decoration: none;
+    color: white;
+    background-color: #265484;
+    border:1px solid #265484;
+  }
+}
