--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,17 +1,19 @@
 <%= simple_form_for([@bulletin, @post]) do |f| %>
-    <%= f.error_notification %>
+  <%= f.error_notification %>
 
-    <div class="form-inputs">
-      <%= f.input :title %>
-      <%= f.input :content, input_html: { rows: 10 } %>
+  <div class="form-inputs">
+    <%= f.input :title %>
+    <%= f.input :content, input_html: { rows: 10 } %>
 
-      <% if @post.bulletin.post_type == "gallery" %>
-          <%= f.input :picture, as: :file %>
-          <%= f.hidden_field :picture_cache %>
-      <% end %>
-    </div>
+    <% if @post.bulletin.post_type == "gallery" %>
+      <%= f.input :picture, as: :file %>
+      <%= f.hidden_field :picture_cache %>
+    <% end %>
 
-    <div class="form-actions">
-      <%= f.button :submit %>
-    </div>
+    <%= f.input :tag_list, placeholder: '하나 이상의 태그는 콤마(,)로 구분하여 입력하세요.' %>
+  </div>
+
+  <div class="form-actions">
+    <%= f.button :submit %>
+  </div>
 <% end %>
