--- a/app/views/posts/post_types/_blog.html.erb
+++ b/app/views/posts/post_types/_blog.html.erb
@@ -2,7 +2,7 @@
 
 <% @posts.each do | post | %>
     <div class='post'>
-      <div class='title'><%= post.title %></div>
+      <div class='title'><%= post.title %> <small>( <%= post.comments.size %> )</small></div>
       <div class='content'><%= simple_format post.content %></div>
       <div>
           <%= link_to 'Show', [post.bulletin, post], class:'btn btn-default' %>
@@ -10,8 +10,12 @@
           <%= link_to 'Destroy', [post.bulletin, post], method: :delete, data: { confirm: 'Are you sure?' }, class:'btn btn-default' %>
       </div>
     </div>
-<% end %>
 
+    <% if post.tag_list.size > 0 %>
+      <div class='tag_list'><%= fa_icon('tags') + " " + tag_icons(post.tag_list) %></div>
+    <% end %>
+    
+<% end %>
 <br>
 
 <%= link_to 'New Post', new_bulletin_post_path, class: 'btn btn-default' %>
