--- a/app/views/posts/post_types/_gallery.html.erb
+++ b/app/views/posts/post_types/_gallery.html.erb
@@ -4,7 +4,7 @@
   <% @posts.each do | post | %>
       <div class='col-lg-3 col-md-3 col-xs-4  picture'>
         <div class='image'><%= link_to(image_tag(post.picture_url(:thumb)), [post.bulletin, post]) if post.picture? %></div>
-        <div class='title'><%= post.title %></div>
+        <div class='title'><%= post.title %> <small>( <%= post.comments.size %> )</small></div>
         <div class='content'><%= post.content %></div>
         <div class='actions'>
           <%= link_to fa_icon('eye'), [post.bulletin, post] %>
@@ -12,8 +12,14 @@
           <%= link_to fa_icon('trash'), [post.bulletin, post], method: :delete, data: { confirm: 'Are you sure?' } %>
         </div>
       </div>
+
+      <% if post.tag_list.size > 0 %>
+        <div class='tag_list'><%= fa_icon('tags') + " " + tag_icons(post.tag_list) %></div>
+      <% end %>
+
   <% end %>
 </div>
+
 <br>
 
 <%= link_to 'New Post', new_bulletin_post_path, class: 'btn btn-default' %>
