--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -14,6 +14,9 @@
     <li>
       5.14 > '그리고 config/routes.rb 파일을 열어 관련 라우팅 테이블 수정해 주어야 한다. 아래는 레일스의 컨트롤러 제너레이터를' >>>> 진행하다가 말았음
     </li>
+    <li>
+      5.15 > 진행중.. 근데 갤러리에서 이미지가 뷰가 안되는거 같음;; 그리고 태그도 등록이 안되는거 같음..
+    </li>
   </ul>
 </div>
 <br>
