--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,23 +1,31 @@
-<h1>Welcome Jacob's Rails Study.</h1>
-<p>I'm OpenShift in jacobrails project.</p>
+<h1>Welcome Jacob's Rails Study (with AWS)</h1>
+<p>본 서비스는 <%= link_to "초보자를 위한 레일스 가이드라인", "https://rorlab.gitbooks.io/railsguidebook" %>의 샘플 프로젝트입니다.</p>
+
 <br>
-<p>본 서비스는 "초보자를 위한 레일스 가이드라인"의 샘플 프로젝트입니다.</p>
-<br>
+
 <div>
   <ul>
     <li>
-      2015.10.28 수요일 / jacob.c 진도 현황 -> <%= link_to "5.7", "https://rorlab.gitbooks.io/railsguidebook/content/contents/walkthrough/model_association.html" %>
+      2015.10.28 / 5.7
     </li>
     <li>
-      2015.10.29 목요일 / jacob.c 진도 현황 -> <%= link_to "5.10", "https://rorlab.gitbooks.io/railsguidebook/content/contents/walkthrough/bulletin_type.html" %>
+      2015.10.29 / 5.10
     </li>
     <li>
-      5.14 > '그리고 config/routes.rb 파일을 열어 관련 라우팅 테이블 수정해 주어야 한다. 아래는 레일스의 컨트롤러 제너레이터를' >>>> 진행하다가 말았음
+      2015.11.02 / 5.14
     </li>
     <li>
-      5.15 > 진행중.. 근데 갤러리에서 이미지가 뷰가 안되는거 같음;; 그리고 태그도 등록이 안되는거 같음..
+      2015.11.03 / 5.15<br>
+      - 진행중.. 근데 갤러리에서 이미지가 뷰가 안되는거 같음;; 그리고 태그도 등록이 안되는거 같음..
     </li>
   </ul>
 </div>
+
 <br>
-<%= link_to "글작성", bulletin_posts_path('1'), class:'btn btn-default' %>
+
+<div>
+  <ul>
+    <li>GitHub : <%= link_to "https://github.com/ucpwang/rails_study" %></li>
+    <li>AWS rails url  : <%= link_to "http://ec2-52-25-57-255.us-west-2.compute.amazonaws.com:3000" %></li>
+  </ul>
+</div>
