index.html.erb update

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -16,7 +16,7 @@
     </li>
     <li>
       2015.11.03 / 5.15<br>
-      - 진행중.. 근데 갤러리에서 이미지가 뷰가 안되는거 같음;; 그리고 태그도 등록이 안되는거 같음..
+      - 진행중.. 근데 갤러리에서 이미지가 뷰가 안되는거 같음;; 그리고 태그도 등록이 안되는거 같음.. -> 희상님 PR 덕분에 버그 찾았음^^ ㅋㅋㅋ 역시 희상님이 짱!짱!짱!
     </li>
   </ul>
 </div>
@@ -25,7 +25,7 @@
 
 <div>
   <ul>
-    <li>GitHub : <%= link_to "https://github.com/ucpwang/rails_study" %></li>
-    <li>AWS rails url  : <%= link_to "http://ec2-52-25-57-255.us-west-2.compute.amazonaws.com:3000" %></li>
+    <li>GitHub : <%= link_to "https://github.com/ucpwang/rails_study", "https://github.com/ucpwang/rails_study" %></li>
+    <li>AWS rails url  : <%= link_to "http://ec2-52-25-57-255.us-west-2.compute.amazonaws.com:3000", "http://ec2-52-25-57-255.us-west-2.compute.amazonaws.com:3000" %></li>
   </ul>
 </div>
